force-app/main/default/objects/Kitchen_Order_Event__e/Kitchen_Order_Event__e.object-meta.xml
<CustomObject>
    <label>Kitchen Order Event</label>
    <pluralLabel>Kitchen Order Events</pluralLabel>
</CustomObject>