force-app/main/default/objects/Kitchen_Order_Event__e/fields/Order_Details__c.field-meta.xml
<CustomField>
    <fullName>Order_Details__c</fullName>
    <description>JSON string of items</description>
    <label>Order Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>