force-app/main/default/objects/Kitchen_Order_Event__e/fields/Order_Time__c.field-meta.xml
<CustomField>
    <fullName>Order_Time__c</fullName>
    <label>Order Time</label>
    <type>DateTime</type>
</CustomField>