force-app/main/default/objects/Kitchen_Order_Event__e/fields/Special_Notes__c.field-meta.xml
<CustomField>
    <fullName>Special_Notes__c</fullName>
    <label>Special Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>