force-app/main/default/objects/Kitchen_Order_Event__e/fields/Table_Number__c.field-meta.xml
<CustomField>
    <fullName>Table_Number__c</fullName>
    <label>Table Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>